--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.9",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -59,6 +60,7 @@
     "semver": "6.3.0",
     "smoothscroll-polyfill": "^0.4.4",
     "style-loader": "0.23.1",
+    "swiper": "^6.3.5",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
